overhaul of previous fix

--- a/css/_variables.sass
+++ b/css/_variables.sass
@@ -3,7 +3,8 @@ $light: 300
 $normal: 500
 $bold: 700
 // Font Size
-$small: 1rem
+$xsmall: 1rem
+$small: 1.5rem
 $medium: 2rem
 $large: 3rem
 // Color Variables
