--- a/css/main.css
+++ b/css/main.css
@@ -499,7 +499,7 @@ h2 {
   }
 }
 
-@media only screen and (min-height: 800px) and (min-width: 1200px) {
+@media only screen and (min-width: 800px) and (max-width: 1200px) {
   .container .left .infobox h1 {
     font-size: 1.5rem;
     line-height: 1.5rem;
