--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,9 @@ body {
   height: 100%;
   width: 100%;
   font-family: "San Francisco", sans-serif;
+}
+
+* {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
@@ -170,7 +173,6 @@ h2 {
   height: 10rem;
   width: 10rem;
   border-radius: 50%;
-  padding-bottom: 1rem;
 }
 
 .container .left .infobox h1 {
@@ -201,7 +203,7 @@ h2 {
       -ms-flex-pack: end;
           justify-content: flex-end;
   width: 100%;
-  margin-bottom: .5rem;
+  padding-bottom: .25rem;
 }
 
 .container .left nav a {
@@ -248,16 +250,16 @@ h2 {
 }
 
 .container .right section h2 {
-  -ms-flex-preferred-size: 20%;
-      flex-basis: 20%;
+  -ms-flex-preferred-size: 25%;
+      flex-basis: 25%;
   text-align: end;
   padding-right: 1rem;
 }
 
 .container .right section p,
 .container .right section ul {
-  -ms-flex-preferred-size: 80%;
-      flex-basis: 80%;
+  -ms-flex-preferred-size: 75%;
+      flex-basis: 75%;
   text-align: start;
 }
 
@@ -282,10 +284,8 @@ h2 {
   -webkit-box-direction: normal;
       -ms-flex-flow: column nowrap;
           flex-flow: column nowrap;
-}
-
-.container .right .experience-item > p > span {
-  font-weight: 700;
+  -ms-flex-preferred-size: 60%;
+      flex-basis: 60%;
 }
 
 .container .right .misc {
@@ -438,7 +438,7 @@ h2 {
   color: #0095ff;
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 1024px) {
   .container {
     margin: 0;
     padding: 0;
@@ -464,14 +464,11 @@ h2 {
     line-height: 1.5rem;
     font-size: 1.25rem;
   }
-  .container .left .wrapper {
-    padding: 0 1rem 0 1rem;
-  }
   .container .left nav a:last-child {
     padding-right: 1rem;
   }
   .container .right section {
-    padding: 0 1rem 1rem 1rem;
+    padding: 0 .5rem 1rem .5rem;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -483,25 +480,35 @@ h2 {
   .container .right section ul,
   .container .right section p {
     font-size: 1rem;
-    -ms-flex-preferred-size: 80%;
-        flex-basis: 80%;
+    -ms-flex-preferred-size: 70%;
+        flex-basis: 70%;
     text-align: start;
   }
   .container .right section h2 {
     font-size: 1rem;
-    -ms-flex-preferred-size: 20%;
-        flex-basis: 20%;
+    -ms-flex-preferred-size: 30%;
+        flex-basis: 30%;
     text-align: end;
-  }
-  .container .right .experience > h2 {
     padding-right: .5rem;
   }
   .container .right .misc {
     font-size: .75rem;
+    padding: 1rem 0 1rem .25rem;
   }
 }
 
-@media only screen and (min-width: 800px) and (max-width: 1200px) {
+@media only screen and (min-width: 1025px) {
+  .container {
+    margin: 0;
+    padding: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row nowrap;
+            flex-flow: row nowrap;
+  }
   .container .left .infobox h1 {
     font-size: 1.5rem;
     line-height: 1.5rem;
