--- a/css/main.sass
+++ b/css/main.sass
@@ -12,6 +12,8 @@ html,
 body
     +fullsize
     font-family: $font
+
+*
     box-sizing: border-box
 
 // Element reset
@@ -114,7 +116,6 @@ h2
             img
                 @include size(10rem,10rem)
                 border-radius: 50%
-                padding-bottom: 1rem
 
             h1
                 line-height: $medium
@@ -135,7 +136,7 @@ h2
             display: inline-flex
             +flex-end
             width: 100%
-            margin-bottom: .5rem
+            padding-bottom: .25rem
 
             a
                 +hover-grow
@@ -153,13 +154,13 @@ h2
             padding: 0 2rem 1rem 2rem
 
             h2
-                flex-basis: 20%
+                flex-basis: 25%
                 text-align: end
                 padding-right: 1rem
 
             p,
             ul
-                flex-basis: 80%
+                flex-basis: 75%
                 text-align: start
 
             ul
@@ -173,10 +174,8 @@ h2
 
         .experience-list
             +flex-column-nowrap
+            flex-basis: 60%
 
-        .experience-item > p > span
-            font-weight: $bold
-        
         .misc
             +flex-row-nowrap
             justify-content: space-between
@@ -198,8 +197,6 @@ h2
     .infobox > a
         background-color: $background-color
         +hover-back-pulse-light
-    
-
 
 .right-light
     background-color: $background-color
@@ -218,7 +215,6 @@ h2
 
     .misc > a:hover > span
             color: $primary-color
-
 
 .left-night
     background-color: $nightmode-primary
@@ -254,7 +250,7 @@ h2
             color: $nightmode-primary
 
 // Mobile breakpoint style
-@media only screen and (max-width: 800px)
+@media only screen and (max-width: 1024px)
     .container
         +reset
         +flex-column-nowrap
@@ -272,37 +268,38 @@ h2
                     line-height: $small
                     font-size: 1.25rem
 
-            .wrapper
-                padding: 0 1rem 0 1rem
+            // .wrapper
+            //     padding: 0 1rem 0 1rem
             nav
                 a:last-child
                         padding-right: 1rem
         
         .right
             section
-                padding: 0 1rem 1rem 1rem
+                padding: 0 .5rem 1rem .5rem
                 +flex-row-nowrap
 
                 ul,
                 p
                     font-size: $xsmall
-                    flex-basis: 80%
+                    flex-basis: 70%
                     text-align: start
 
                 h2
                     font-size: $xsmall
-                    flex-basis: 20%
+                    flex-basis: 30%
                     text-align: end
+                    padding-right: .5rem
             
-            .experience > h2
-                padding-right: .5rem
-
             .misc
                 font-size: .75rem
+                padding: 1rem 0 1rem .25rem
 
 // Tablet and bigger styling
-@media only screen and (min-width: 800px) and (max-width: 1200px)
+@media only screen and (min-width: 1025px)
     .container
+        +reset
+        +flex-row-nowrap
         .left
             .infobox
                 h1
