--- a/css/main.sass
+++ b/css/main.sass
@@ -142,6 +142,10 @@ h2
                 +hover-grow
                 font-size: $medium
                 padding-right: 1rem
+                &:first-child
+                    font-size: 1.8rem
+                    padding-bottom: .25rem
+                    
                 &:last-child
                     padding-right: 2rem
 
