--- a/css/main.sass
+++ b/css/main.sass
@@ -145,7 +145,10 @@ h2
                 &:first-child
                     font-size: 1.8rem
                     padding-bottom: .25rem
-                    
+
+                &:nth-child(3), &:nth-child(4)
+                    padding-bottom: .1rem
+
                 &:last-child
                     padding-right: 2rem
 
