--- a/css/main.css
+++ b/css/main.css
@@ -231,6 +231,10 @@ h2 {
   padding-bottom: .25rem;
 }
 
+.container .left nav a:nth-child(3), .container .left nav a:nth-child(4) {
+  padding-bottom: .1rem;
+}
+
 .container .left nav a:last-child {
   padding-right: 2rem;
 }
