--- a/css/main.sass
+++ b/css/main.sass
@@ -166,7 +166,8 @@ h2
                 padding-right: 1rem
 
             p,
-            ul
+            ul,
+            form,
                 flex-basis: 75%
                 text-align: start
 
@@ -182,6 +183,34 @@ h2
         .experience-list
             +flex-column-nowrap
             flex-basis: 60%
+
+        .contact-form
+            padding-top: .5rem
+
+            p
+                padding-bottom: .5rem
+
+            input,
+            button,
+            label > textarea,
+                color: inherit
+                background-color: inherit
+                font-family: inherit
+                font-size: $xsmall
+                border: solid inherit 1px
+
+            input
+                width: 50%
+                padding: .25rem   
+
+            button
+                border-radius: 5%
+                padding: .25rem .5rem
+
+            textarea
+                width: 95%
+                padding: .25rem
+                resize: none
 
         .misc
             +flex-row-nowrap
@@ -213,6 +242,14 @@ h2
     section > h2,
     .fa-check-circle,
         color: $secondary-color
+
+            
+    .contact-form
+        input,
+        textarea,
+        button
+            border: 1.5px $text-color solid
+            border-radius: .25rem
 
     .misc > a
         color: $text-color
@@ -246,6 +283,11 @@ h2
     .fa-check-circle,
         color: $nightmode-secondary
         
+    .contact-form
+        input,
+        textarea,
+        button
+            border: 1.5px $nightmode-text solid
 
     .misc > a
         color: $nightmode-text
@@ -289,15 +331,15 @@ h2
                 ul,
                 p
                     font-size: $xsmall
-                    flex-basis: 70%
+                    flex-basis: 75%
                     text-align: start
 
                 h2
                     font-size: $xsmall
-                    flex-basis: 30%
+                    flex-basis: 25%
                     text-align: end
                     padding-right: .5rem
-            
+
             .misc
                 font-size: .75rem
                 padding: 1rem 0 1rem .25rem
