--- a/css/main.sass
+++ b/css/main.sass
@@ -185,7 +185,10 @@ h2
             flex-basis: 60%
 
         .contact-form
-            padding-top: .5rem
+            padding-top: .25rem
+
+            h2
+                padding-top: .25rem
 
             p
                 padding-bottom: .5rem
