--- a/css/_mixins.sass
+++ b/css/_mixins.sass
@@ -60,19 +60,19 @@
 
 @keyframes back-pulse-light
   50%
-    background-color: lighten($secondary-color, 35%)
+    background-color: lighten($secondary-color, 50%)
 
-=hover-back-pulse-night
-    +hover-back-pulse-light
-    &:hover,
-    &:focus,
-    &:active,
-        animation-name: back-pulse-night
+//=hover-back-pulse-night
+//    +hover-back-pulse-light
+//    &:hover,
+//    &:focus,
+//    &:active,
+//        animation-name: back-pulse-night
 
-@keyframes back-pulse-night
-  50%
-    background-color: lighten($nightmode-secondary, 20%)
+//@keyframes back-pulse-night
+//  50%
+//    background-color: lighten($nightmode-secondary, 20%)
 
-=hover-text
-    +hover-back-pulse-light
+//=hover-text
+//    +hover-back-pulse-light
 // Shoutout to Hover.css :)
